[gd_scene load_steps=8 format=2]

[ext_resource path="res://ObstacleCourse_Part3/CharacterStatsDemo/CharacterSpinBox.gd" type="Script" id=1]
[ext_resource path="res://ObstacleCourse_Part3/CharacterStatsDemo/UICharacter.gd" type="Script" id=2]
[ext_resource path="res://ObstacleCourse_Part3/CharacterStatsDemo/UICharacterStats.gd" type="Script" id=4]
[ext_resource path="res://ObstacleCourse_Part3/assets/obstacle_course_part3.theme" type="Theme" id=5]
[ext_resource path="res://ObstacleCourse_Part3/CharacterStatsDemo/godot.png" type="Texture" id=6]
[ext_resource path="res://addons/PracticeTester/ui/theme/fonts/font_title.tres" type="DynamicFont" id=8]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 8 )

[node name="UICharacterStats" type="Panel"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = -150.5
margin_right = 267.0
margin_bottom = 150.5
custom_constants/separation = 50

[node name="UICharacter" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 301.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/UICharacter"]
margin_right = 120.0
margin_bottom = 123.0
texture = ExtResource( 6 )

[node name="LabelAnchor" type="Control" parent="HBoxContainer/UICharacter/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="PunchButton" type="Button" parent="HBoxContainer/UICharacter"]
margin_top = 127.0
margin_right = 120.0
margin_bottom = 163.0
text = "Punch"

[node name="TakeHitButton" type="Button" parent="HBoxContainer/UICharacter"]
margin_top = 167.0
margin_right = 120.0
margin_bottom = 203.0
text = "Take Hit"

[node name="LockpickButton" type="Button" parent="HBoxContainer/UICharacter"]
margin_top = 207.0
margin_right = 120.0
margin_bottom = 243.0
text = "Lockpick"

[node name="Stats" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 170.0
margin_right = 560.0
margin_bottom = 301.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Stats"]
margin_top = 1.0
margin_right = 390.0
margin_bottom = 37.0
size_flags_vertical = 0
text = "Character name"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Stats"]
margin_top = 45.0
margin_right = 390.0
margin_bottom = 65.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Stats"]
margin_top = 73.0
margin_right = 390.0
margin_bottom = 119.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Stats/HBoxContainer"]
margin_left = 13.0
margin_top = 5.0
margin_right = 173.0
margin_bottom = 41.0
rect_min_size = Vector2( 160, 0 )
text = "Strength"

[node name="StrengthSpinBox" type="SpinBox" parent="HBoxContainer/Stats/HBoxContainer"]
margin_left = 177.0
margin_right = 377.0
margin_bottom = 46.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 99.0
value = 2.0
align = 1
script = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Stats"]
margin_top = 127.0
margin_right = 390.0
margin_bottom = 173.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Stats/HBoxContainer2"]
margin_left = 13.0
margin_top = 5.0
margin_right = 173.0
margin_bottom = 41.0
rect_min_size = Vector2( 160, 0 )
text = "Endurance"

[node name="EnduranceSpinBox" type="SpinBox" parent="HBoxContainer/Stats/HBoxContainer2"]
margin_left = 177.0
margin_right = 377.0
margin_bottom = 46.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 99.0
value = 2.0
align = 1
script = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Stats"]
margin_top = 181.0
margin_right = 390.0
margin_bottom = 227.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Stats/HBoxContainer3"]
margin_left = 13.0
margin_top = 5.0
margin_right = 173.0
margin_bottom = 41.0
rect_min_size = Vector2( 160, 0 )
text = "Intelligence"

[node name="IntelligenceSpinBox" type="SpinBox" parent="HBoxContainer/Stats/HBoxContainer3"]
margin_left = 177.0
margin_right = 377.0
margin_bottom = 46.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 99.0
value = 2.0
align = 1
script = ExtResource( 1 )

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Stats"]
margin_top = 235.0
margin_right = 390.0
margin_bottom = 255.0
custom_constants/separation = 20

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/Stats"]
margin_top = 263.0
margin_right = 390.0
margin_bottom = 299.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Stats/HBoxContainer4"]
margin_top = 2.0
margin_right = 160.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = ExtResource( 8 )
text = "Skill Points"

[node name="RemainingPointsLabel" type="Label" parent="HBoxContainer/Stats/HBoxContainer4"]
margin_left = 164.0
margin_top = 2.0
margin_right = 324.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 0 )
theme = SubResource( 1 )
text = "5"
align = 1

[node name="ResetButton" type="Button" parent="HBoxContainer/Stats/HBoxContainer4"]
margin_left = 328.0
margin_right = 390.0
margin_bottom = 36.0
text = "reset"
